[project]
name = "hivisionidphotos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.128.0",
    "gradio==6.3.0",
    "mtcnn-runtime==1.0.0",
    "numpy==1.26.4",
    "onnxruntime==1.23.2",
    "opencv-python==4.11.0.86",
    "requests==2.32.5",
    "starlette==0.50.0",
    "tqdm==4.67.1",
]
